--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         <!-- FOOTER -->
         <footer>
             <div class="container">
-                <p>Copyright 2024 <i class="las la-copyright"></i>Erfanpv</p>
+                <p>Copyright 2024 <i class="las la-copyright"></i>Muheenudeen CT</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/muheenudheen-ct-9aa9452a0/" target="_blank"><i class="lab la-linkedin-in"></i></a>
                     <a href="https://www.instagram.com/mueen_003_/profilecard/?igsh=ZHNvajVubm5ybjU3" target="_blank"><i class="lab la-instagram"></i></a>
